perfil tarjeta demo

--- a/modulo2/index.html
+++ b/modulo2/index.html
@@ -3,65 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hola Mundo</title>
-
-    <!--Estilos  -->
-    <style>
-        body{
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Inter', sans-serif;
-            font-size: 16px;
-            color: #222;
-        }
-        .container{
-            display: flex;
-            flex-direction: column;
-            justify-content: center;            
-        }
-
-    </style>
+    <title>Ejercicio HTML</title>
 </head>
 <body>
+
     <div class="container">
-        <h1>Hola Mundo</h1>
-        <table>
-            <thead>
-                <tr>
-                    <td>Nombre</td>
-                    <td>Apellido</td>
-                    <td>Correo</td>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Felipe</td>
-                    <td>Camacho</td>
-                    <td>felipecamacho@mail.net</td>
-                </tr>
-                <tr>
-                    <td>Carlos</td>
-                    <td>Lopez</td>
-                    <td>carloslopez@mail.net</td>
-                </tr>
-                <tr>
-                    <td>Ana</td>
-                    <td>Henao</td>
-                    <td>anahenao@mail.net</td>
-                </tr>
-                <tr>
-                    <td>Luisa</td>
-                    <td>Sanchez</td>
-                    <td>luisasanchez@mail.net</td>
-                </tr>
-                <tr>
-                    <td>Simon</td>
-                    <td>Castillo</td>
-                    <td>simonmcastillo@mail.net</td>
-                </tr>
-            </tbody>
-        </table>
     </div>
+    
 </body>
 </html>
