--- a/modulo2/quis5HTML/contacto.html
+++ b/modulo2/quis5HTML/contacto.html
@@ -7,16 +7,21 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Contacto</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
+    <header>        
+        <nav class="navbar-inner-new">
+            <ul >
+                <li><a href="index.html">Premios</a></li>
                 <li><a href="categorias.html">Categorías</a></li>
+            </ul>
+            <a href="#" class="logo">GGPrizes</a>
+            <ul >
                 <li><a href="participantes.html">Participantes</a></li>
                 <li><a href="votacion.html">Votación</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
             </ul>
+            
+        <ul class="mobile-menu" style="display: none;">
+                <li><a href="#">MENU</a></li>
+        </ul>
         </nav>
     </header>
     <main>
@@ -32,7 +37,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Premios de Videojuegos. Todos los derechos reservados.</p>
+        <p>&copy; 2024 Premios de Videojuegos.  Contacto <a href="mailto:rafaelcastilloac8@gmail.com"> Contact  email </a></p>
     </footer>
     <script src="scripts.js"></script>
 </body>
