--- a/modulo2/quis5HTML/participantes.html
+++ b/modulo2/quis5HTML/participantes.html
@@ -7,33 +7,38 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Videojuegos Nominados</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
+    <header>        
+        <nav class="navbar-inner-new">
+            <ul >
+                <li><a href="index.html">Premios</a></li>
                 <li><a href="categorias.html">Categorías</a></li>
+            </ul>
+            <a href="#" class="logo">GGPrizes</a>
+            <ul >
                 <li><a href="participantes.html">Participantes</a></li>
                 <li><a href="votacion.html">Votación</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
             </ul>
+            
+        <ul class="mobile-menu" style="display: none;">
+                <li><a href="#">MENU</a></li>
+        </ul>
         </nav>
     </header>
     <main>
         <section>
             <h2>Juego 1</h2>
-            <p>Descripción del Juego 1.</p>
-            <img src="imagenes/juego1.jpg" alt="Juego 1">
+            <p>Rumbleverse</p>
+            <img src="https://cdn2.unrealengine.com/rumbleverse-1280x720-dfbbbe5cc904.jpg" width="350" alt="Juego 1">
         </section>
         <section>
             <h2>Juego 2</h2>
-            <p>Descripción del Juego 2.</p>
-            <img src="imagenes/juego2.jpg" alt="Juego 2">
+            <p>Rocket league</p>
+            <img src="https://www.rocketleague.com/images/keyart/rl_evergreen.jpg" width="350" alt="Juego 2">
         </section>
         <!-- Agregar más juegos según sea necesario -->
     </main>
     <footer>
-        <p>&copy; 2024 Premios de Videojuegos. Todos los derechos reservados.</p>
+        <p>&copy; 2024 Premios de Videojuegos.  Contacto <a href="mailto:rafaelcastilloac8@gmail.com"> Contact  email </a></p>
     </footer>
     <script src="scripts.js"></script>
 </body>
