--- a/modulo2/quis5HTML/votacion.html
+++ b/modulo2/quis5HTML/votacion.html
@@ -7,36 +7,57 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Votación de Premios</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
+    <header>        
+        <nav class="navbar-inner-new">
+            <ul >
+                <li><a href="index.html">Premios</a></li>
                 <li><a href="categorias.html">Categorías</a></li>
+            </ul>
+            <a href="#" class="logo">GGPrizes</a>
+            <ul >
                 <li><a href="participantes.html">Participantes</a></li>
                 <li><a href="votacion.html">Votación</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
             </ul>
+            
+        <ul class="mobile-menu" style="display: none;">
+                <li><a href="#">MENU</a></li>
+        </ul>
         </nav>
     </header>
     <main>
-        <section>
-            <h2>Vota por tu Juego Favorito</h2>
-            <form id="votingForm">
-                <label for="game1">Juego 1</label>
-                <input type="radio" id="game1" name="vote" value="game1">
-                <label for="game2">Juego 2</label>
-                <input type="radio" id="game2" name="vote" value="game2">
-                <!-- Agregar más opciones de juegos según sea necesario -->
-                <button type="submit">Votar</button>
-            </form>
-            <p id="result"></p>       
-        <p id="result"></p>
-    </section>
-</main>
-<footer>
-    <p>&copy; 2024 Premios de Videojuegos. Todos los derechos reservados.</p>
-</footer>
+        <div class="hgroup">
+            <h2>Título Categoría</h2>
+        </div>
+        <ul class="options">
+            <li class="items">
+                <div class="inner-item">
+                    <div class="hero-wrapper">
+                        <h2>Mejor Juego de Acción:</h2>
+                    </div>
+                    <div class="text">
+                        <p>Fortnite: Lego</p>
+                        <input type="radio" id="option1" name="vote" value="Fortnite: Lego">
+                        <label for="option1">Votar</label>
+                    </div>
+                </div>
+            </li>
+            <li class="items">
+                <div class="inner-item">
+                    <div class="hero-wrapper">
+                        <h2>Mejor Juego de Acción:</h2>
+                    </div>
+                    <div class="text">
+                        <p>Halo Infinity</p>
+                        <input type="radio" id="option2" name="vote" value="Halo Infinity">
+                        <label for="option2">Votar</label>
+                    </div>
+                </div>
+            </li>
+        </ul>
+    </main>
+    <footer>
+        <p>&copy; 2024 Premios de Videojuegos.  Contacto <a href="mailto:rafaelcastilloac8@gmail.com"> Contact  email </a></p>
+    </footer>
 <script src="scripts.js"></script>
 </body>
 </html>
