--- a/modulo2/quis5HTML/votacion.html
+++ b/modulo2/quis5HTML/votacion.html
@@ -26,7 +26,7 @@
     </header>
     <main>
         <div class="hgroup">
-            <h2>Título Categoría</h2>
+            <h2>Vota por tu juego de la Categoría: </h2>
         </div>
         <ul class="options">
             <li class="items">
@@ -35,9 +35,9 @@
                         <h2>Mejor Juego de Acción:</h2>
                     </div>
                     <div class="text">
-                        <p>Fortnite: Lego</p>
-                        <input type="radio" id="option1" name="vote" value="Fortnite: Lego">
-                        <label for="option1">Votar</label>
+                        <p>Fortnite: Lego </p>
+                        <input type="radio" id="option1" name="vote" value="fornite ">
+                        <label for="option1">Votar </label>
                     </div>
                 </div>
             </li>
@@ -47,7 +47,7 @@
                         <h2>Mejor Juego de Acción:</h2>
                     </div>
                     <div class="text">
-                        <p>Halo Infinity</p>
+                        <p>Halo Infinity </p>
                         <input type="radio" id="option2" name="vote" value="Halo Infinity">
                         <label for="option2">Votar</label>
                     </div>
